Corrected About Us Paragraph Spacing

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -518,7 +518,7 @@ a:focus {
 
 .about .about-text p {
     font-size: 16px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .about .about-text a.btn {
